config/base/rest-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-service
  labels:
    app.kubernetes.io/name: rest-service
    app.kubernetes.io/part-of: data-connect-hub
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: rest-service-tls
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rest-service
  ports:
    - name: https
      port: 8443
      targetPort: https
    - name: metrics
      port: 9090
      targetPort: metrics
