config/base/rest-service/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rest-service
  labels:
    app.kubernetes.io/name: rest-service
    app.kubernetes.io/part-of: data-connect-hub
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rest-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: opendatahub
      ports:
        - protocol: TCP
          port: 8443
    - ports:
        - protocol: TCP
          port: 9090
